# python-devops-cicd-project

./: LICENSE  PLAN.md  README.md  pyproject.toml
.github/workflows/: python-ci.yaml
src/url_checker/: __init__.py  __main__.py  checker.py  cli.py  formatter.py  logger.py
